// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SelectPriority component should render with Info Box when Adaptation priority is selected 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
      <option
        value="30"
      >
        [V30] Voids major
      </option>
      <option
        value="15"
      >
        [V15] Voids minor
      </option>
      <option
        value="200"
      >
        [AD20] Minor Adaptation
      </option>
      <option
        value="300"
      >
        [AD30] Intermediate Adaptation
      </option>
      <option
        value="170"
      >
        [AD17] Major Adaptation
      </option>
    </select>
  </div>
  <br />
  <div
    class="warning-info-box govuk-inset-text lbh-inset-text"
  >
    <div
      class="lbh-warning-text govuk-warning-text"
    >
      <span
        aria-hidden="true"
        class="govuk-warning-text__icon"
      >
        !
      </span>
      <div
        class="govuk-warning-text__text"
      >
        <span
          class="govuk-warning-text__assistive"
        >
          Warning
        </span>
        <p
          class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
        >
          Adaptations priority
        </p>
        <p
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          Adaptation work orders do not go to the DRS booking system
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectPriority component should render with Info Box when Planned priority is selected 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
      <option
        value="30"
      >
        [V30] Voids major
      </option>
      <option
        value="15"
      >
        [V15] Voids minor
      </option>
      <option
        value="200"
      >
        [AD20] Minor Adaptation
      </option>
      <option
        value="300"
      >
        [AD30] Intermediate Adaptation
      </option>
      <option
        value="170"
      >
        [AD17] Major Adaptation
      </option>
    </select>
  </div>
  <br />
  <div
    class="warning-info-box govuk-inset-text lbh-inset-text"
  >
    <div
      class="lbh-warning-text govuk-warning-text"
    >
      <span
        aria-hidden="true"
        class="govuk-warning-text__icon"
      >
        !
      </span>
      <div
        class="govuk-warning-text__text"
      >
        <span
          class="govuk-warning-text__assistive"
        >
          Warning
        </span>
        <p
          class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
        >
          Planned priority
        </p>
        <p
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          Planned work orders do not go to the DRS booking system
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectPriority component should render with Info Box when VOIDS priority is selected 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
      <option
        value="30"
      >
        [V30] Voids major
      </option>
      <option
        value="15"
      >
        [V15] Voids minor
      </option>
      <option
        value="200"
      >
        [AD20] Minor Adaptation
      </option>
      <option
        value="300"
      >
        [AD30] Intermediate Adaptation
      </option>
      <option
        value="170"
      >
        [AD17] Major Adaptation
      </option>
    </select>
  </div>
  <br />
  <div
    class="warning-info-box govuk-inset-text lbh-inset-text"
  >
    <div
      class="lbh-warning-text govuk-warning-text"
    >
      <span
        aria-hidden="true"
        class="govuk-warning-text__icon"
      >
        !
      </span>
      <div
        class="govuk-warning-text__text"
      >
        <span
          class="govuk-warning-text__assistive"
        >
          Warning
        </span>
        <p
          class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
        >
          VOIDS priority
        </p>
        <p
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          VOIDS work orders do not go to the DRS booking system
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectPriority component should render with Info Box when task priority in Planned by default 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
      <option
        value="30"
      >
        [V30] Voids major
      </option>
      <option
        value="15"
      >
        [V15] Voids minor
      </option>
      <option
        value="200"
      >
        [AD20] Minor Adaptation
      </option>
      <option
        value="300"
      >
        [AD30] Intermediate Adaptation
      </option>
      <option
        value="170"
      >
        [AD17] Major Adaptation
      </option>
    </select>
  </div>
  <br />
  <div
    class="warning-info-box govuk-inset-text lbh-inset-text"
  >
    <div
      class="lbh-warning-text govuk-warning-text"
    >
      <span
        aria-hidden="true"
        class="govuk-warning-text__icon"
      >
        !
      </span>
      <div
        class="govuk-warning-text__text"
      >
        <span
          class="govuk-warning-text__assistive"
        >
          Warning
        </span>
        <p
          class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
        >
          Planned priority
        </p>
        <p
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          Planned work orders do not go to the DRS booking system
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectPriority component should render without Info Box 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
      <option
        value="30"
      >
        [V30] Voids major
      </option>
      <option
        value="15"
      >
        [V15] Voids minor
      </option>
      <option
        value="200"
      >
        [AD20] Minor Adaptation
      </option>
      <option
        value="300"
      >
        [AD30] Intermediate Adaptation
      </option>
      <option
        value="170"
      >
        [AD17] Major Adaptation
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`SelectPriority component should render without Info Box when Planned priority is selected but contractor is H04 Gas 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
      <option
        value="30"
      >
        [V30] Voids major
      </option>
      <option
        value="15"
      >
        [V15] Voids minor
      </option>
      <option
        value="200"
      >
        [AD20] Minor Adaptation
      </option>
      <option
        value="300"
      >
        [AD30] Intermediate Adaptation
      </option>
      <option
        value="170"
      >
        [AD17] Major Adaptation
      </option>
    </select>
  </div>
</DocumentFragment>
`;
